--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,23 @@ google-cloud-firestore
 python-dotenv
 google-auth
 python-multipart==0.0.6
-numpy
+
+torch
+torchvision
+keras==2.15.0
+matplotlib==3.8.2
+matplotlib-inline==0.1.6
+numpy==1.26.2
+pandas==2.1.3
+rsa==4.9
+scikit-learn==1.3.2
+scipy==1.11.4
+seaborn==0.13.0
+tensorboard==2.15.1
+tensorboard-data-server==0.7.2
+tensorflow==2.15.0
+tensorflow-estimator==2.15.0
+tensorflow-intel==2.15.0
+tensorflow-io-gcs-filesystem==0.31.0
+tqdm==4.66.1
+opencv-python
